@@ -20,7 +20,7 @@
 #include "config.h"
 
 #include <stdlib.h>
-#include <stdint.h>
+#include <_stdint.h>
 #include <stdio.h>
 #include <string.h>
 
