@@ -21,7 +21,7 @@
 #include "sierra.h"
 
 #include <stdlib.h>
-#include <stdint.h>
+#include <_stdint.h>
 #include <stdio.h>
 #include <string.h>
 #include <time.h>
